--- a/.github/workflows/deploy-angular.yml
+++ b/.github/workflows/deploy-angular.yml
@@ -24,15 +24,27 @@ jobs:
     - name: Build Angular app
       run: npm run build -- --configuration production
 
-    - name: Deploy to Azure VM and Set Permissions
+    # STEP 1 (DEBUG): This will show us the correct path
+    - name: List the contents of the dist folder
+      run: ls -R dist
+
+    - name: Deploy files to VM
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.AZURE_VM_IP }}
         username: ${{ secrets.AZURE_VM_USER }}
         key: ${{ secrets.AZURE_VM_SSH_KEY }}
-        source: "dist/quizz-front/browser/*" # This assumes your build output is in 'dist/quizz-front/browser'
+        source: "dist/quizz-front/browser/*"  # <-- We will likely change this path
         target: "/var/www/html"
         overwrite: true
-        script_after: |
+
+    # STEP 2 (FIX): This step now correctly sets permissions
+    - name: Set permissions on VM
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.AZURE_VM_IP }}
+        username: ${{ secrets.AZURE_VM_USER }}
+        key: ${{ secrets.AZURE_VM_SSH_KEY }}
+        script: |
           sudo chown -R www-data:www-data /var/www/html
           sudo chmod -R 755 /var/www/html
